
  * Fixed bug creating the podcast default dir
  * Fixed bug deleting old podcasts

2009-11-05 14:05:00
  * Fixed LyricWiki lyric search engine
  * Added support for Podcasts
  * Only allow to select one radiostation
  * Added support for musicbrainz searchs in Track Editor. Its Album
    oriented. Can search for tracks even when no metadata is not found
    using audio fingerprint. Leave empty artist and title fields for this.
  * Added partial support to gnome session. Now save playlist when session is ended
  * Added support for Discogs cover download. See www.discogs.com
  * Added cd universe lyric search
  * Fixed drop files after any element in the player playlist
  * Added option in Album list box to select a cover file from disk
  * Fixed the amazon cover download
  * In Player Playlist selection is cancelled when new playlist is set
  * Added support to ape file format.
  * Added support to mp4 using libmp4 library. Need libmp4v2 installed
  * Added column genre to songs list box
  * Added support to flac, ogg and mpc file formats.
  * TaskBar Icon is created/removed if enabled/disabled from preferences
  * Fixed bug in playlist not allowing to delete more than one track if the
    first track is selected
  * Albums list box will show the albums with the latest year only
  * Added LeoLyrics lyric search http://leoslyrics.com/
  * Fixed bug in radio stations list box ordering

2009-08-04 0.1.5
  * Lyrics panel allow to enter any track name for manual lyrics search
  * Clicking in Songs List box selects the sorting of the tracks
  * Added an option to save/restore playing position when track is bigger than the
    length specified in preferences
  * Fixed bug in library updated when only changed dir name
  * Added option in last.fm panel to copy element info text to clipboard
  * Update the library automatically if detects an old version installed
  * Tracks passed in command line will be played by default